--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
