--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyCXnx5D8EE_ZL0f-hx8sPvIvSRkzOJXeVk"/>
+     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 </manifest>
