--- a/package.json
+++ b/package.json
@@ -10,9 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^6.0.2",
+    "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
+    "amazon-cognito-identity-js": "^5.1.0",
+    "aws-amplify": "^4.2.9",
+    "aws-amplify-react-native": "^5.0.3",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "^0.29.3",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-reanimated": "^2.2.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.7.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
