--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,7 @@ target 'Uber' do
   # React Native Maps dependencies
 rn_maps_path = '../node_modules/react-native-maps'
 pod 'react-native-google-maps', :path => rn_maps_path
+pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
   config = use_native_modules!
 
   use_react_native!(
